examples/bad/type8.swifty
//comparison of objects with different types, all of the following lines cause an error
print 5 == true
print 4 < true
print {1} == {{1}}
print (1,2) == {1,2}
print (1,2) < (2,3)
